--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,16 @@ body {
 	border-right: 1px solid #eee;
 	border-left: 1px solid #eee;
 }
+
+button {
+	background-color: #FFFFFF;
+	color: #000000;
+	padding: 0.75rem;
+	border: 1px solid #900020;
+	border-radius: 10px;
+}
+button:hover {
+	background-color: #900020;
+	color: #FFFFFF;
+	transition: 0.3s ease-out;
+}
